qtpfsgui (1.8.12-2) unstable; urgency=low

  * Move maintenance to pkg-phototools now that the team has been created
    on alioth: Maintainer set to the team, put myself in Uploaders.
  * Update Vcs-* accordingly.
  * Add a “lrelease-qt4” call in the “makebuilddir” target, so that
    localization files get built, and then later installed. Delete the
    generated files in the “clean” target.
  * No longer “rmdir” the /usr/share/qtpfsgui directory since it is no
    longer empty.

 -- Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>  Tue, 18 Dec 2007 16:42:21 +0100

qtpfsgui (1.8.12-1) unstable; urgency=low

  * Initial release (Closes: #410655).
  * The following patch removes the unneeded “Encoding” key from the
    upstream desktop file:
     - 10_remove_encoding_from_desktop_file.

 -- Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>  Fri, 14 Dec 2007 02:46:03 +0100